2013-09-08  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c, server/player.c, client/common/client.c,
	editor/gtk/editor.c: Added hints for translators.
	* server/gtk/pioneers-server.desktop.in,
	client/gtk/pioneers.desktop.in,
	editor/gtk/pioneers-editor.desktop.in: Removed trademarked word.
	* pioneers.spec.in: Make more similar to Redhat version.
	* editor/gtk/editor.c: Fixed spelling a/an in tooltips.
	* common/network.c: Fixed spelling error.

2013-09-03  Roland Clobus <rclobus@rclobus.nl>
	* docs/pioneers-metaserver.6, metaserver/main.c: Use Ctrl-C instead of
	SIGUSR1 to stop the metaserver.
	* configure.ac: Substitute all variables in pioneers.spec.in. Fixes
	the building of rpm on openSUSE.

2013-09-02  Micah Bunting <amnykon@gmail.com>
        * server/develop.c, server/server.h, server/turn.c, server/pregame.c,
        common/cards.c, common/cards.h, client/common/client.c,
        client/common/client.h, client/common/develop.c: Removes gint
	turn_bought from DevelCard and replaces it with two guint
	num_playable_cards.

2013-08-27  Roland Clobus <rclobus@rclobus.nl>
	* metaserver/main.c, common/network.c: Fixed memory leaks in the
	metaserver.

2013-06-28  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c: Check whether the metaserver is still alive.
	* server/meta.c, server/server.c, server/server.h: Reconnect to the
	metaserver when the connection is broken.

2013-06-27  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh, configure.ac: Set required version of autoconf back to
	2.68, to build on Ubuntu Precise again.

2013-06-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, Makefile.am, autogen.sh, client/gtk/data/Makefile.am,
	common/Makefile.am: Minimum required version for automake is 1.11,
	fixed warnings for automake 1.13.
	* common/network.h, server/player.c, metaserver/main.c:
	Initialised GError for net_get_peer_name.
	* configure.ac, server/main.c, Makefile.am, metaserver/main.c,